# simulador-solo-fundacao

./: .gitignore  LICENSE  README.md  app.py  check_installation.py  install.py.backup  install_dependencies.sh  packages.txt  pyproject.toml  requeriments.txt  requirements.txt  setup.py
data/: soil_database.json
examples/: foundation_example.py
src/: __init__.py  bulbo_tensoes.py  bulbo_tensoes_boussinesq.py  estacas.py  export_system.py  foundation_calculations.py  fundacoes.py  integracao_tcc.py  models.py  mohr_coulomb.py  nbr_validation.py  relatorio_abnt.py  settings.py  soil_calculations.py  terzaghi.py  validacao_casos_teste.py
streamlit/: config.toml  secrets.toml  setup.sh  theme_custom.css
tests/: test_foundation.py  test_integration.py  test_models.py
utils/: export_utils.py
